// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoreLocatorBlockSave component matches snapshot with default attributes 1`] = `
<DocumentFragment>
  <div
    data-api-key=""
    data-zoom="13"
    id="storeLocatorWidget"
    style="height: 300px;"
  />
</DocumentFragment>
`;

exports[`StoreLocatorBlockSave component matches snapshot with provided attributes 1`] = `
<DocumentFragment>
  <div
    data-api-key="your-api-key"
    data-zoom="15"
    id="storeLocatorWidget"
    style="height: 400px;"
  />
</DocumentFragment>
`;
